@@ -13,7 +13,10 @@ Imports: MASS, graphics, grDevices, stats, utils
 Suggests: rgl, candisc, effects, reshape, gplots, nlme, lattice, reshape2, corrgram, FRB, animation
 LazyLoad: yes
 LazyData: yes
-Description: Provides HE plot functions for visualizing hypothesis tests in multivariate linear models. They represents sums-of-squares-and-products matrices for linear hypotheses and for error using ellipses (in two dimensions) and ellipsoids (in three dimensions).
+Description: Provides HE plot and other functions for visualizing hypothesis tests in multivariate linear models. 
+     HE plots represent sums-of-squares-and-products matrices for linear hypotheses and for error using ellipses 
+     (in two dimensions) and ellipsoids (in three dimensions).  The related candisc package provides visualizations
+     in a reduced-rank canonical discrimininant space when there are more than a few response variables. 
 License: GPL (>= 2)
 URL: http://datavis.ca/R/index.php#heplots
 
